updated repo with sonar CICD